# api-v1

./: Cargo.toml
src/: main.rs
src/errors/: common.rs  mod.rs  response.rs
src/errors/auth/: email_verification.rs  mod.rs  password_reset.rs  password_reset_request.rs  signup.rs
src/errors/routes/auth/: email_verification.rs  mod.rs  password_reset.rs  password_reset_request.rs  signin.rs  signup.rs
src/routes/: mod.rs
src/routes/auth/: email_verification.rs  mod.rs  password_reset.rs  password_reset_request.rs  signin.rs  signup.rs
src/services/: database_service.rs  email_service.rs  mod.rs
src/services/database/: email_verification.rs  mod.rs  password_reset_request.rs  session.rs  user.rs
src/services/email/: mod.rs
src/setup/: database.rs  email_service.rs  mod.rs  router.rs
src/utils/: cookies.rs  crypto.rs  mod.rs  random.rs  schemas.rs  validation.rs
