[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-extra = "0.9.4"
hyper = {version = "1.5.0", features = ["full"]}
serde = { version = "1.0.212", features = ["derive"] }
serde_json = "1.0.132"
surrealdb = "2.0.4"
tokio = {version = "1.41.0", features = ["full"]}
tonic = "0.12.3"
tower = "0.5.1"
tower-http = "0.6.1"
uuid = {version = "1.11.0", features = ["v4", "serde"]}
validator = { version = "0.18.1", features = ["derive"] }
