[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.7", features= ["macros"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
chrono = "0.4.38"
cookie = "0.18.1"
data-encoding = "2.6.0"
derive_more = { version = "1.0.0", features = ["full"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
hex = "0.4.3"
hyper = { version = "1.5.0", features = ["full"] }
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.11.1"
resend-rs = "0.9.1"
serde = { version = "1.0.212", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
surrealdb = "2.0.4"
tokio = { version = "1.41.0", features = ["full"] }
tonic = "0.12.3"
tower = "0.5.1"
tower-http = "0.6.1"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }
